before starting to develop on bastion

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,15 @@
 [defaults]
-inventory = ./inventory
-collections_paths = ./collections
-retry_files_enabled = False
+inventory = inventories/aws_ec2.yml,inventories/overlay.ini
 host_key_checking = False
-deprecation_warnings = False
 interpreter_python = auto_silent
+stdout_callback = yaml
+forks = 20
+retry_files_enabled = False
+deprecation_warnings = False
+collections_paths = ./collections
+
+
+[ssh_connection]
+pipelining = True
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o ServerAliveInterval=30 -o ServerAliveCountMax=10
+
