--- a/ansible/inventories/overlay.ini
+++ b/ansible/inventories/overlay.ini
@@ -2,7 +2,7 @@
 [all:vars]
 ansible_user=ec2-user
 ansible_ssh_private_key_file=~/.ssh/a3-redhat-lab-key.pem
-ansible_ssh_common_args=-o ProxyJump=ec2-user@50.233.66.46
+#ansible_ssh_common_args=-o ProxyJump=ec2-user@44.204.63.213
 
 [automationcontroller]
 aap.dev.lab ansible_host=10.60.2.180
